frame/support/test/tests/pallet_ui/storage_invalid_first_generic.stderr
error: Invalid pallet::storage, for unnamed generic arguments the type first generic argument must be `_`, the argument is then replaced by macro.
  --> $DIR/storage_invalid_first_generic.rs:19:29
   |
19 |     type Foo<T> = StorageValue<u8, u8>;
   |                                ^^

error: expected `_`
  --> $DIR/storage_invalid_first_generic.rs:19:29
   |
19 |     type Foo<T> = StorageValue<u8, u8>;
   |                                ^^
